Correction CMake warnings

--- a/addons/urdfreader/CMakeLists.txt
+++ b/addons/urdfreader/CMakeLists.txt
@@ -1,6 +1,7 @@
-PROJECT (RBDL_ADDON_URDFREADER)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+cmake_policy(SET CMP0048 OLD)
+PROJECT (RBDL_ADDON_URDFREADER)
 
 LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )
 
@@ -47,7 +48,7 @@ ELSE (RBDL_BUILD_STATIC)
 	SET_TARGET_PROPERTIES ( rbdl_urdfreader PROPERTIES
 		VERSION ${RBDL_VERSION}
 		SOVERSION ${RBDL_SO_VERSION}
-  )
+        )
 
 	TARGET_LINK_LIBRARIES (rbdl_urdfreader
 		rbdl
