Correction du CMake RBDL (dépendance Eigen)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,16 +36,9 @@ IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 ENDIF()
 
-# Find and use the system's Eigen3 library
-FIND_PACKAGE (Eigen3 3.0.0)
-
-IF (NOT EIGEN3_FOUND AND NOT RBDL_USE_SIMPLE_MATH)
-	MESSAGE (WARNING "Could not find Eigen3 on your system. Install it or use the slower SimpleMath library by enabling RBDL_USE_SIMPLE_MATH.")
-ENDIF (NOT EIGEN3_FOUND AND NOT RBDL_USE_SIMPLE_MATH)
-
-IF (EIGEN3_FOUND AND NOT RBDL_USE_SIMPLE_MATH)
-	INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
-ENDIF (EIGEN3_FOUND AND NOT RBDL_USE_SIMPLE_MATH)
+IF (NOT RBDL_USE_SIMPLE_MATH)
+    include_directories(${EIGEN_DIRECTORY})
+ENDIF (NOT RBDL_USE_SIMPLE_MATH)
 
 # Options
 OPTION (RBDL_BUILD_STATIC "Build statically linked library (otherwise dynamiclly linked)" OFF)
