--- a/addons/urdfreader/CMakeLists.txt
+++ b/addons/urdfreader/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-cmake_policy(SET CMP0048 OLD)
+IF (NOT (${CMAKE_MAJOR_VERSION} LESS 3))
+    cmake_policy(SET CMP0048 OLD)
+ENDIF (NOT (${CMAKE_MAJOR_VERSION} LESS 3))
 PROJECT (RBDL_ADDON_URDFREADER)
 
 LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )
