--- a/addons/urdfreader/CMakeLists.txt
+++ b/addons/urdfreader/CMakeLists.txt
@@ -1,6 +1,19 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 project(rbdl_urdfreader)
 
+# IMPORTED FROM CORE CMakeLists.txt
+SET ( RBDL_VERSION_MAJOR 2 )
+SET ( RBDL_VERSION_MINOR 4 )
+SET ( RBDL_VERSION_PATCH 0 )
+SET ( RBDL_VERSION 
+	${RBDL_VERSION_MAJOR}.${RBDL_VERSION_MINOR}.${RBDL_VERSION_PATCH}
+)
+SET ( RBDL_SO_VERSION 
+	${RBDL_VERSION_MAJOR}.${RBDL_VERSION_MINOR}.${RBDL_VERSION_PATCH}
+)
+SET (PROJECT_VERSION ${RBDL_VERSION})
+# END of core import
+
 find_package(catkin REQUIRED COMPONENTS rbdl)
 
 catkin_package(
