Now urdfdom is a dependency as a catkin package (fixing very weird issues appearing on my install (checked with quentin)

--- a/addons/urdfreader/CMakeLists.txt
+++ b/addons/urdfreader/CMakeLists.txt
@@ -14,12 +14,12 @@ SET ( RBDL_SO_VERSION
 SET (PROJECT_VERSION ${RBDL_VERSION})
 # END of core import
 
-find_package(catkin REQUIRED COMPONENTS rbdl)
+find_package(catkin REQUIRED COMPONENTS rbdl urdfdom)
 
 catkin_package(
   INCLUDE_DIRS .
   LIBRARIES rbdl_urdfreader
-  CATKIN_DEPENDS rbdl
+  CATKIN_DEPENDS rbdl urdfdom
 )
 
 IF (NOT (${CMAKE_MAJOR_VERSION} LESS 3))
@@ -28,7 +28,7 @@ ENDIF (NOT (${CMAKE_MAJOR_VERSION} LESS 3))
 
 LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )
 
-FIND_PACKAGE(URDF)
+#FIND_PACKAGE(URDF)
 
 SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
 	LINKER_LANGUAGE CXX
