--- a/addons/urdfreader/package.xml
+++ b/addons/urdfreader/package.xml
@@ -12,8 +12,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>rbdl</build_depend>
+  <build_depend>urdfdom</build_depend>
 
   <run_depend>rbdl</run_depend>
+  <run_depend>urdfdom</run_depend>
 
   <export>
   </export>
